--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <div class="header_left">
             <h1>Имя Фамилия</h1>
             <div class="bio">
-                <p>Здесь напиши что-нибудь о себе :)</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Филантроп</p>
+                <p>Миллиардер</p>
+                <p>Учусь в алгоритмике</p>
             </div>
         </div>
         <div class="header_right">
